History for xm.theme
====================

(name of developer listed in brackets)


xm.theme 0.8 (unreleased)
-------------------------

- Made gradient images bigger in height for layout reasons. [mirella]

- Fixed name typo in css. [mirella]

- Placed the gradient images in bottom in the used classes. [mirella]

- Added translations and description for employees overview. [mirella]

- Added odd color and padding to employees overview. [mirella]

- Started HISTORY.txt (merged from 0.7.2).  [maurits]



xm.theme 0.7 (2008-05-15)
-------------------------

- No history recorded.


xm.theme 0.6 (2008-03-31
-------------------------

- No history recorded.


xm.theme 0.5 (2008-03-03)
-------------------------

- No history recorded.


xm.theme 0.4 (2008-02-27)
-------------------------

- No history recorded.


xm.theme 0.3 (2008-02-26)
-------------------------

- No history recorded.


xm.theme 0.2 (2008-02-25)
-------------------------

- No history recorded.